# intyrnet-radivo

./: .editorconfig  .gitignore  LICENSE  README.md  clean.sh  index.html  package.json
.github/workflows/: build.yml
public/: notification.html
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/models/: station.rs
src-tauri/src/services/: mod.rs  station_service.rs
src-tauri/src/sources/: amg.rs  mod.rs  ru101.rs
src/services/: amgService.js  audioService.js
src/sources/: AmgSource.js  README.md  RadioSource.js  Ru101Source.js  index.js
src/stores/: appStore.js
src/utils/: helpers.js
