[package]
name = "intyrnet-radivo"
version = "1.2.0"
description = "Интырнэт Радиво - приложение для прослушивания радио"
authors = ["Radio App"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.20"
tokio = { version = "1", features = ["full"] }
url = "2.5"
async-trait = "0.1"
urlencoding = "2.1"
tauri-plugin-single-instance = "2.3.7"
base64 = "0.22"

[features]
default = []
